@@ -117,7 +117,7 @@ gtk_event_box_class_init (GtkEventBoxClass *class)
                                    PROP_VISIBLE_WINDOW,
                                    g_param_spec_boolean ("visible-window",
                                                         _("Visible Window"),
-                                                        _(" Whether the event box is visible, as opposed to invisible and only used to trap events."),
+                                                        _("Whether the event box is visible, as opposed to invisible and only used to trap events."),
                                                         FALSE,
                                                         G_PARAM_READWRITE));
   g_object_class_install_property (gobject_class,
@@ -241,7 +241,7 @@ gtk_event_box_get_visible_window (GtkEventBox *event_box)
  * you want to set the background to a different color or
  * draw on it.
  *
- * <note>
+ * <note><para>
  * There is one unexpected issue for an invisible event box that has its
  * window below the child. (See gtk_event_box_set_above_child().)
  * Since the input-only window is not an ancestor window of any windows
@@ -250,11 +250,11 @@ gtk_event_box_get_visible_window (GtkEventBox *event_box)
  * The practical effect of this is if an event isn't in the event
  * mask for the descendant window (see gtk_widget_add_events()),  
  * it won't be received by the event box. 
- *
+ * </para><para>
  * This problem doesn't occur for visible event boxes, because in
  * that case, the event box window is actually the ancestor of the
  * descendant windows, not just at the same place on the screen.
- * </note>
+ * </para></note>
  * 
  * Since: 2.4
  **/
